--- a/pokedex3/Base.lproj/Main.storyboard
+++ b/pokedex3/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,95 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ioI-k2-6WG">
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="cr2-eF-Cbj"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="24b-Vk-gXc">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Vl4-0L-yFu"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="Rym-mF-Utz"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0UF-Ie-ES1">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eAS-qx-0sQ">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="KH8-BA-NTr" customClass="PokeCell" customModule="pokedex3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="QAQ-zI-lhP">
+                                                    <color key="backgroundColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="LOs-pl-cdC"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charmander" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7t-Af-rbA">
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="12"/>
+                                                    <color key="textColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="j7t-Af-rbA" firstAttribute="leading" secondItem="KH8-BA-NTr" secondAttribute="leading" id="2ej-4O-2ba"/>
+                                            <constraint firstAttribute="trailing" secondItem="j7t-Af-rbA" secondAttribute="trailing" id="4br-zN-0jS"/>
+                                            <constraint firstItem="QAQ-zI-lhP" firstAttribute="leading" secondItem="KH8-BA-NTr" secondAttribute="leading" id="61U-3p-3iL"/>
+                                            <constraint firstAttribute="bottom" secondItem="j7t-Af-rbA" secondAttribute="bottom" id="DnY-Xk-hI2"/>
+                                            <constraint firstItem="QAQ-zI-lhP" firstAttribute="top" secondItem="KH8-BA-NTr" secondAttribute="top" id="EJv-Ob-zTr"/>
+                                            <constraint firstAttribute="trailing" secondItem="QAQ-zI-lhP" secondAttribute="trailing" id="Lpx-UY-k4z"/>
+                                            <constraint firstItem="j7t-Af-rbA" firstAttribute="top" secondItem="QAQ-zI-lhP" secondAttribute="bottom" id="haI-a6-AOc"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="j7t-Af-rbA" id="xM2-s9-eYt"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ioI-k2-6WG" secondAttribute="trailing" id="1UQ-94-CP5"/>
+                            <constraint firstItem="Rym-mF-Utz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1nr-Ii-v3W"/>
+                            <constraint firstAttribute="trailing" secondItem="24b-Vk-gXc" secondAttribute="trailing" id="87M-05-RSI"/>
+                            <constraint firstItem="0UF-Ie-ES1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="B1D-Od-2fI"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0UF-Ie-ES1" secondAttribute="bottom" constant="20" id="EN7-Wf-dC2"/>
+                            <constraint firstItem="ioI-k2-6WG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="MhD-4N-wCt"/>
+                            <constraint firstItem="0UF-Ie-ES1" firstAttribute="top" secondItem="24b-Vk-gXc" secondAttribute="bottom" constant="20" id="N4u-Ns-y4M"/>
+                            <constraint firstAttribute="trailing" secondItem="Rym-mF-Utz" secondAttribute="trailing" id="Uag-jj-Uft"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Rym-mF-Utz" secondAttribute="bottom" id="Zxe-ki-1QP"/>
+                            <constraint firstAttribute="trailing" secondItem="0UF-Ie-ES1" secondAttribute="trailing" constant="20" id="dOS-Wb-HK8"/>
+                            <constraint firstItem="Rym-mF-Utz" firstAttribute="top" secondItem="24b-Vk-gXc" secondAttribute="bottom" id="eQs-sF-uAB"/>
+                            <constraint firstItem="ioI-k2-6WG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="n1r-kf-TNU"/>
+                            <constraint firstItem="24b-Vk-gXc" firstAttribute="top" secondItem="ioI-k2-6WG" secondAttribute="bottom" id="qXp-Hv-iGa"/>
+                            <constraint firstItem="24b-Vk-gXc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="viz-ZI-HsA"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="0UF-Ie-ES1" id="src-hX-cLa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
